--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.8.0",
-		"mongoose": "^8.4.4"
+		"mongoose": "^8.4.4",
+		"pg": "^8.12.0"
 	},
 	"keywords": [],
 	"description": ""
